# territories-in-three-dimensions

./: .gitignore  Cargo.toml  README.md  compute.html  index.html  version.txt
.github/workflows/: deploy-preview.yml  deploy.yml
_app/: version.json
_app/immutable/assets/: 11.fec413c3.css  8.cac3958a.css  Button.b10e84dc.css  Input.e1830e36.css  (+2 more)
assets/: my_crate_bg.wasm
client/: package.json  tailwind.config.cjs
client/src/: app.css  app.html  app.postcss
docs/: package.json
marching-cubes-test/: Cargo.toml
marching-cubes-test/src/: main.rs  mc.rs
plot-data/: gamma_lambda_param.ipynb  image.ipynb  orderparams.ipynb
plot-data/client-visual-images/: image.ipynb
plot-data/data/: beta=1.5e-05.csv  beta=1e-05.csv  beta=1e-06-old.csv  beta=1e-06.csv  beta=5e-06.csv
server/: Cargo.toml
server/src/: main.rs
server/src/endpoints/: endpoint_2d.rs  endpoint_3d.rs  endpoint_model.rs  endpoint_queries.rs  mod.rs
server/src/model/: marching_cubes.rs  mod.rs  neighbour_data.rs  node.rs  universe.rs
server/src/model/utils/: create_edges.rs  dimensions.rs  hyper_params.rs  mod.rs  species.rs
server/src/neighbour_data/: mod.rs  neighbour_data.rs  neighbour_data_2d.rs  neighbour_data_3d.rs  neighbour_indeces.rs
server/src/nodes/: mod.rs  node.rs  node_2d.rs  node_3d.rs
server/src/universe/: mod.rs  universe.rs  universe_2d.rs  universe_3d.rs
server/src/utils/: hyper_params.rs  mod.rs  species.rs
vision/: 3d.html  print.html
webgpu-test/: package.json  tsconfig.json  vite.config.ts
webgpu-test/my-crate/: Cargo.toml
webgpu-test/src/: app.css
(+109 files in other folders)
