[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
isosurface = "0.0.4"
oorandom = "11.1.3"
pad = "0.1.6"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
